Optimised for mobile
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/messages.html
+++ b/src/messages.html
@@ -36,122 +36,131 @@
         </div>
     </nav>
 
-    <div class="container-fluid px-5">
-        <div class="row">
+    <div class="container-fluid px-lg-5">
+        <div class="row messages-window">
             <div class="sidebar col-12 col-md-4">
-                <div class="display-4 mt-4 mb-5">Messages</div>
+                <div class="display-4 my-3">Messages</div>
                 <div class="profiles">
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="profile-select row align-items-center">
-                        <div class="col-3 col-md-2 m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                                alt="Profile picture">
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                        </div>
+                        <div class="">
+                            <div>Abhishek Roy</div>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div class="m-2">
+                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                        </div>
+                        <div class="">
+                            <div>Abhishek Roy</div>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="conversations col-12 col-md-8 my-4">
+            <div class="conversations col-12 col-md-8 ">
                 <div class="convo-title row align-items-center">
-                    <div class="col-3 col-md-1 m-2">
-                        <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px"
-                            alt="Profile picture">
-                    </div>
-                    <div class="col-6 col-md-4">
-                        <div>Abhishek Roy</div>
-                        <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
+                    <div class="profile-select d-flex flex-row align-items-center">
+                        <div>
+                            <img src="./img/Grey_full.png" class="rounded-circle m-2" width="70px" height="70px" alt="...">
+                        </div>
+                        <div>
+                            <div>Abhishek Roy</div>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
                     </div>
                 </div>
                 <div class="chat my-2">
@@ -238,14 +247,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="input row mt-3">
+                <div class="send-input row mt-3 align-items-center">
                     <form action="" class="col-12">
                         <div class="form-group row">
-                            <div class="col-10">
+                            <div class="col-8 col-md-10">
                                 <input type="text" class="form-control" id="firstname" name="firstname"
                                     placeholder="Say Something">
                             </div>
-                            <div class="col-2">
+                            <div class="col-4 col-md-2">
                                 <div class="btn btn-block btn-primary">Send</div>
                             </div>
                         </div>
