--- a/src/settings.html
+++ b/src/settings.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-md-5">
         <div class="row">
             <div class="sidebar col-12 col-md-4">
                 <div class="display-4 mt-4 mb-5">Settings</div>
@@ -49,7 +49,7 @@
             <div class="conversations col-12 col-md-8 my-4">
                 <div class="row">
                     <div class="selected-option-title display-4 col-12 mb-5">Profile</div>
-                    <div class="col-6">
+                    <div class="col-12 col-md-6 order-2 order-md-1">
                         <form>
                             <div class="form-group row">
                                 <label for="firstname" class="col-md-4 col-form-label">First Name</label>
@@ -82,7 +82,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-6 text-center">
+                    <div class="col-12 col-md-6 text-center order-1 order-md-2 mb-5">
                         <img src="./img/Grey_full.png" class="rounded-circle" width="200px" height="200px" alt="..."></br>
                         <div class="btn btn-primary btn-small mt-3">Change Profile Picture</div>
                     </div>
