--- a/src/profile.html
+++ b/src/profile.html
@@ -36,6 +36,32 @@
         </div>
     </nav>
 
+	<!-- Comment Modal -->
+	<div class="modal fade" id="commentModal" tabindex="-1" role="dialog"
+		aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLongTitle">Comment</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					  <span aria-hidden="true">&times;</span>
+					</button>
+				  </div>
+				<div class="modal-body">
+					<form action="">
+						<div class="form-group">
+								<textarea class="form-control" id="user-send-comment" name="user-send-comment" placeholder="Write your comment here" rows="12"></textarea>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary">Send</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
     <div class="container-fluid px-lg-5">
         <div class="user my-3">
             <div class="row align-items-center">
@@ -84,152 +110,13 @@
 						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
-						<div class="action lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-share"></i> Send</div>
-					</div>
-				</div>
-				<div class="col-md-4 comment-col">
-					<div class="comments">
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card mt-md-5 mb-3 border-0 social-card">
-			<div class="d-flex flex-row align-items-center">
-				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
-				</div>
-				<div class="">
-					<div>Abhishek Roy</div>
-					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				</div>
-			</div>
-			<div class="row interact d-flex">
-				<div class="col-md-8 row">
-					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
-					</div>
-					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
-						<div class="action lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-share"></i> Send</div>
-					</div>
-				</div>
-				<div class="col-md-4 comment-col">
-					<div class="comments">
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card mt-md-5 mb-3 border-0 social-card">
-			<div class="d-flex flex-row align-items-center">
-				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
-				</div>
-				<div class="">
-					<div>Abhishek Roy</div>
-					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				</div>
-			</div>
-			<div class="row interact d-flex">
-				<div class="col-md-8 row">
-					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
-					</div>
-					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
-						<div class="action lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="action lead my-2 my-md-4"><i class="fas fa-share"></i> Send</div>
+						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
+						<a class="action post-comment lead my-2 my-md-4" data-toggle="modal"
+							data-target="#commentModal">
+							<i class="fas fa-comment"></i> Comment
+						</a>
+						<a class="action post-share lead my-2 my-md-4"><i class="fas fa-share-alt"></i> Share</a>
+						<a class="action post-send lead my-2 my-md-4"><i class="fas fa-share"></i> Send</a>
 					</div>
 				</div>
 				<div class="col-md-4 comment-col">
