--- a/src/index.html
+++ b/src/index.html
@@ -37,26 +37,97 @@
 	</nav>
 
 	<!-- Comment Modal -->
-	<div class="modal fade" id="commentModal" tabindex="-1" role="dialog"
-		aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLongTitle">Comment</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					  <span aria-hidden="true">&times;</span>
+						<span aria-hidden="true">&times;</span>
 					</button>
-				  </div>
+				</div>
 				<div class="modal-body">
 					<form action="">
 						<div class="form-group">
-								<textarea class="form-control" id="user-send-comment" name="user-send-comment" placeholder="Write your comment here" rows="12"></textarea>
+							<textarea class="form-control" id="user-send-comment" name="user-send-comment"
+								placeholder="Write your comment here" rows="12"></textarea>
 						</div>
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 					<button type="button" class="btn btn-primary">Send</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Share Modal -->
+	<div class="modal fade" id="shareModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+		aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLongTitle">Share on your profile</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form action="">
+						<div class="form-group">
+							<textarea class="form-control" id="user-send-share" name="user-send-share"
+								placeholder="Write your caption here" rows="5"></textarea>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary">Send</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Send Modal -->
+	<div class="modal fade" id="sendModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+		aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLongTitle">Send to your friends</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form action="">
+						<div class="form-group row">
+							<div class="col-md-12">
+								<input type="text" class="form-control" id="friend-search" name="friend-search"
+									placeholder="Search">
+							</div>
+						</div>
+						<div class="pl-2">
+							<div class="form-group d-flex justify-content-between">
+								<label for="friend-name" class="col-form-label">Abhishek Roy</label>
+								<button type="button" class="btn btn-primary">Send</button>
+							</div>
+							<div class="form-group d-flex justify-content-between">
+								<label for="friend-name" class="col-form-label">Abhishek Roy</label>
+								<button type="button" class="btn btn-primary">Send</button>
+							</div>
+							<div class="form-group d-flex justify-content-between">
+								<label for="friend-name" class="col-form-label">Abhishek Roy</label>
+								<button type="button" class="btn btn-primary">Send</button>
+							</div>
+							<div class="form-group d-flex justify-content-between">
+								<label for="friend-name" class="col-form-label">Abhishek Roy</label>
+								<button type="button" class="btn btn-primary">Send</button>
+							</div>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -84,8 +155,168 @@
 							data-target="#commentModal">
 							<i class="fas fa-comment"></i> Comment
 						</a>
-						<a class="action post-share lead my-2 my-md-4"><i class="fas fa-share-alt"></i> Share</a>
-						<a class="action post-send lead my-2 my-md-4"><i class="fas fa-share"></i> Send</a>
+						<a class="action post-share lead my-2 my-md-4" data-toggle="modal" data-target="#shareModal">
+							<i class="fas fa-share-alt"></i> Share
+						</a>
+						<a class="action post-send lead my-2 my-md-4" data-toggle="modal" data-target="#sendModal">
+							<i class="fas fa-share"></i> Send
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 comment-col">
+					<div class="comments">
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="card mt-md-5 mb-3 border-0 social-card">
+			<div class="d-flex flex-row align-items-center">
+				<div class="m-2">
+					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+				</div>
+				<div class="">
+					<div>Abhishek Roy</div>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</div>
+			<div class="row interact d-flex">
+				<div class="col-md-8 row">
+					<div class="post-img col-12 col-md-8 col-lg-9">
+						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+					</div>
+					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
+						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
+						<a class="action post-comment lead my-2 my-md-4" data-toggle="modal"
+							data-target="#commentModal">
+							<i class="fas fa-comment"></i> Comment
+						</a>
+						<a class="action post-share lead my-2 my-md-4" data-toggle="modal" data-target="#shareModal">
+							<i class="fas fa-share-alt"></i> Share
+						</a>
+						<a class="action post-send lead my-2 my-md-4" data-toggle="modal" data-target="#sendModal">
+							<i class="fas fa-share"></i> Send
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 comment-col">
+					<div class="comments">
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+								scuba diving we had planed it years ago
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="card mt-md-5 mb-3 border-0 social-card">
+			<div class="d-flex flex-row align-items-center">
+				<div class="m-2">
+					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+				</div>
+				<div class="">
+					<div>Abhishek Roy</div>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</div>
+			<div class="row interact d-flex">
+				<div class="col-md-8 row">
+					<div class="post-img col-12 col-md-8 col-lg-9">
+						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+					</div>
+					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
+						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
+						<a class="action post-comment lead my-2 my-md-4" data-toggle="modal"
+							data-target="#commentModal">
+							<i class="fas fa-comment"></i> Comment
+						</a>
+						<a class="action post-share lead my-2 my-md-4" data-toggle="modal" data-target="#shareModal">
+							<i class="fas fa-share-alt"></i> Share
+						</a>
+						<a class="action post-send lead my-2 my-md-4" data-toggle="modal" data-target="#sendModal">
+							<i class="fas fa-share"></i> Send
+						</a>
 					</div>
 				</div>
 				<div class="col-md-4 comment-col">
