--- a/src/messages.html
+++ b/src/messages.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -56,7 +56,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -65,7 +65,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -74,7 +74,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -83,7 +83,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -92,7 +92,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -101,7 +101,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -110,7 +110,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -119,7 +119,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -128,7 +128,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -137,7 +137,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
@@ -146,7 +146,7 @@
                         </div>
                         <div class="">
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                         </div>
                         <div>
                             <div>Abhishek Roy</div>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
