Added random names and phrases
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/profile.html
+++ b/src/profile.html
@@ -197,47 +197,43 @@
 				<div class="col-md-4 comment-col">
 					<div class="comments">
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+							<p class="card-text"><strong>Raj Parker </strong>He was disappointed when he found the beach to be so sandy and the sun so sunny.</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+							<p class="card-text"><strong>Bradleigh Munro </strong>You've been eyeing me all day and waiting for your move like a lion stalking a gazelle in a savannah.
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Giselle Mueller </strong>When I cook spaghetti, I like to boil it a few minutes past al dente so the noodles are super slippery.</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Anwar Ingram </strong>The fact that there's a stairway to heaven and a highway to hell explains life well.
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Gerald Hope </strong>I am my aunt's sister's daughter.</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Harper Kavanagh </strong>Iron pyrite is the most foolish of all minerals.
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Carys Holden </strong>Wisdom is easily acquired when hiding under the bed with a saucepan on your head.</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Amanpreet Lin </strong>The wake behind the boat told of the past while the open sea for told life in the unknown future.
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>The rain pelted the windshield as the darkness engulfed us.</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Liya Mccoy </strong>Hey, Why didnt you call me for
 								scuba diving we had planed it years ago
 							</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+							<p class="card-text"><strong>Sarah-Jane Morales </strong>Sometimes, all you need to do is completely make an ass of yourself and laugh it off to realise that life isn’t so bad after all.</p>
 						</div>
 					</div>
 				</div>
@@ -275,125 +271,44 @@
 				<div class="col-md-4 comment-col">
 					<div class="comments">
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+							<p class="card-text"><strong>Bronwen Herbert </strong>Nice Picture</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+							<p class="card-text"><strong>Affan Kennedy </strong>Hey, Why didnt you call me for
 								scuba diving we had planed it years ago
 							</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+							<p class="card-text"><strong>Waqas Clifford </strong>On Cloud Nine</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+							<p class="card-text"><strong>Maude Mcclain </strong>Heads Up
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Karan Guerra </strong>Garlic ice-cream was her favorite.</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Cem Macleod </strong>He figured a few sticks of dynamite were easier than a fishing pole to catch fish.
+							</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Helen Baker </strong>He watched the dancing piglets with panda bear tummies in the swimming pool.</p>
+						</div>
+						<div class="comment mb-2">
+							<p class="card-text"><strong>Coral Kaur </strong>Hey, Why didnt you call me for
 								scuba diving we had planed it years ago
 							</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+							<p class="card-text"><strong>Hamzah Vo </strong>Never underestimate the willingness of the greedy to throw you under the bus.</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
+							<p class="card-text"><strong>Rhian Sanders </strong>He was willing to find the depths of the rabbit hole in order to be with her.
 							</p>
 						</div>
 						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card mt-md-5 mb-3 border-0 social-card">
-			<div class="d-flex flex-row align-items-center">
-				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
-				</div>
-				<div class="">
-					<div>Abhishek Roy</div>
-					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				</div>
-			</div>
-			<div class="row interact d-flex">
-				<div class="col-md-8 row">
-					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
-					</div>
-					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
-						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
-						<a class="action post-comment lead my-2 my-md-4" data-toggle="modal"
-							data-target="#commentModal">
-							<i class="fas fa-comment"></i> Comment
-						</a>
-						<a class="action post-share lead my-2 my-md-4" data-toggle="modal" data-target="#shareModal">
-							<i class="fas fa-share-alt"></i> Share
-						</a>
-						<a class="action post-send lead my-2 my-md-4" data-toggle="modal" data-target="#sendModal">
-							<i class="fas fa-share"></i> Send
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4 comment-col">
-					<div class="comments">
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
-								scuba diving we had planed it years ago
-							</p>
-						</div>
-						<div class="comment mb-2">
-							<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+							<p class="card-text"><strong>Zidane Vang </strong>This is a Japanese doll.</p>
 						</div>
 					</div>
 				</div>
