Added random images and avatars
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/messages.html
+++ b/src/messages.html
@@ -43,109 +43,109 @@
                 <div class="profiles">
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=1" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Bronwen Herbert</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=2" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Affan Kennedy</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=3" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Waqas Clifford</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=4" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Maude Mcclain</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=5" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Karan Guerra</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=6" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Cem Macleod</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=7" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Helen Baker</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=8" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Coral Kaur</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=9" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Hamzah Vo</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=10" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Rhian Sanders</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=11" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Zidane Vang</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div class="m-2">
-                            <img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=12" class="rounded-circle" width="70px" height="70px" alt="...">
                         </div>
                         <div class="">
-                            <div>Abhishek Roy</div>
+                            <div>Raj Parker</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
@@ -155,10 +155,10 @@
                 <div class="convo-title row align-items-center">
                     <div class="profile-select d-flex flex-row align-items-center">
                         <div>
-                            <img src="./img/Grey_full.png" class="rounded-circle m-2" width="70px" height="70px" alt="...">
+                            <img src="https://i.pravatar.cc/300?img=13" class="rounded-circle m-2" width="70px" height="70px" alt="...">
                         </div>
                         <div>
-                            <div>Abhishek Roy</div>
+                            <div>Bradleigh Munro</div>
                             <p class="card-text"><small class="text-muted">Last seen 3 mins ago</small></p>
                         </div>
                     </div>
