--- a/src/profile.html
+++ b/src/profile.html
@@ -137,7 +137,7 @@
         <div class="user my-3">
             <div class="row align-items-center">
                 <div class="col-12 col-md-4 text-center">
-                    <img src="./img/Grey_full.png" class="rounded-circle" width="200px" height="200px" alt="...">
+                    <img src="https://i.pravatar.cc/300?img=59" class="rounded-circle" width="200px" height="200px" alt="...">
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="user-profile display-3">
@@ -168,7 +168,7 @@
         <div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=59" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Abhishek Roy</div>
@@ -178,7 +178,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=1" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
@@ -242,7 +242,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=59" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Abhishek Roy</div>
@@ -252,7 +252,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=2" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
