--- a/src/settings.html
+++ b/src/settings.html
@@ -83,7 +83,7 @@
                         </form>
                     </div>
                     <div class="col-12 col-md-6 text-center order-1 order-md-2 mb-5">
-                        <img src="./img/Grey_full.png" class="rounded-circle" width="200px" height="200px" alt="..."></br>
+                        <img src="https://i.pravatar.cc/300?img=59" class="rounded-circle" width="200px" height="200px" alt="..."></br>
                         <div class="btn btn-primary btn-small mt-3">Change Profile Picture</div>
                     </div>
                 </div>
