--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=1" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Jevon Dillard</div>
@@ -147,7 +147,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=1" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
@@ -212,7 +212,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=2" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Hettie Neville</div>
@@ -222,7 +222,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=2" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
@@ -286,7 +286,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=3" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Jevon Dillard</div>
@@ -296,7 +296,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=3" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
@@ -361,7 +361,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=4" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Hettie Neville</div>
@@ -371,7 +371,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=4" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
@@ -435,7 +435,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=5" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Jevon Dillard</div>
@@ -445,7 +445,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=5" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
@@ -510,7 +510,7 @@
 		<div class="card mt-md-5 mb-3 border-0 social-card">
 			<div class="d-flex flex-row align-items-center">
 				<div class="m-2">
-					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+					<img src="https://i.pravatar.cc/300?img=6" class="rounded-circle" width="70px" height="70px" alt="...">
 				</div>
 				<div class="">
 					<div>Hettie Neville</div>
@@ -520,7 +520,7 @@
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
 					<div class="post-img col-12 col-md-8 col-lg-9">
-						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
+						<img src="https://picsum.photos/200/300?random=6" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-4 col-lg-3 actions-panel align-self-center">
 						<a class="action post-like lead my-2 my-md-4"><i class="fas fa-heart"></i> Like</a>
