--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#"><i class="fas fa-play"></i> Media-Core</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
 			aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +35,7 @@
 			</div>
 		</div>
 	</nav>
+	<div class="behindNav"></div>
 
 	<!-- Comment Modal -->
 	<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
