--- a/src/profile.html
+++ b/src/profile.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><i class="fas fa-play"></i> Media-Core</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,8 @@
                 <a class="nav-item nav-link" href="./settings.html"><i class="fas fa-cog"></i> Settings</a>
             </div>
         </div>
-    </nav>
+	</nav>
+	<div class="behindNav"></div>
 
 	<!-- Comment Modal -->
 	<div class="modal fade" id="commentModal" tabindex="-1" role="dialog"
