--- a/src/settings.html
+++ b/src/settings.html
@@ -17,7 +17,7 @@
     <title>Media Core</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><i class="fas fa-play"></i> Media-Core</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,6 +33,7 @@
             </div>
         </div>
     </nav>
+    <div class="behindNav"></div>
 
     <div class="container-fluid px-md-5">
         <div class="row">
